bug 577707 - some Indic scripts rendered with incorrect font/glyphs on OS X. r=jdaggett a=blocking-betaN